crates/fig-parser/tests/snapshots/integration_tests__unions__generic_single.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Union:
      visibility: Default
      annotations: []
      name:
        segments:
          - Option
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires: []
      variants:
        - name: some
          ty:
            Path:
              path:
                segments:
                  - T
              generic_args: []
        - name: none
          ty:
            Path:
              path:
                segments:
                  - ok
              generic_args: []
