crates/fig-parser/tests/snapshots/integration_tests__unions__with_where.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Union:
      visibility: Default
      annotations: []
      name:
        segments:
          - Comparable
      generic_params:
        - Type:
            name: A
            bounds:
              - Path:
                  path:
                    segments:
                      - Ord
                  generic_args: []
            default_type: ~
        - Type:
            name: B
            bounds:
              - Path:
                  path:
                    segments:
                      - Ord
                  generic_args: []
            default_type: ~
      requires: []
      variants:
        - name: first
          ty:
            Path:
              path:
                segments:
                  - A
              generic_args: []
        - name: second
          ty:
            Path:
              path:
                segments:
                  - B
              generic_args: []
